# shopflow-returns-roi-model

./: .gitignore  README.md  baseline_model.py  predict.py  pyproject.toml
data/: README.md
docs/: INTELLIGENT_ROUTER.md
models/: README.md  intelligent_router.pkl  logistic_regression_balanced_model.pkl  preprocessor.pkl  random_forest_model.pkl
notebooks/: README.md  model_evaluation_analysis.ipynb
outputs/: README.md  feature_importance.csv  full_model_comparison.csv  model_comparison.csv  performance_by_category.csv
src/: baseline_model.pkl  compare_models.py  config.py  demo_intelligent_router.py  enhanced_model.py  intelligent_router.py  optimize_router_thresholds.py  scaler.pkl
src/utils/: __init__.py  evaluation.py  preprocessing.py  visualization.py
tests/: README.md  test_intelligent_router.py
